# redminePlasmoid

./: CMakeLists.txt  Messages.sh  REDMINE.md  redminePlasmoid.kdev4
package/: metadata.desktop
package/contents/code/: logic.js
package/contents/config/: main.xml
package/contents/ui/: CompactRepresentation.qml  Popup.qml  TaskItem.qml  TaskList.qml  config.ui  main.qml
